Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6307

Interop 2.6.0<->2.7 recovery-small test_105: MGS refused the connection from different version MDT

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.7.0, Lustre 2.8.0
    • Lustre 2.7.0
    • None
    • 3
    • 17662

      This issue was created by maloo for sarah <sarah@whamcloud.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/e154ad20-bfc4-11e4-881f-5254006e85c2.

      The sub-test test_105 failed with the following error:

      mount failed
      

      MDS

      Lustre: DEBUG MARKER: == recovery-small test 105: IR: NON IR clients support == 20:22:45 (1425154965)
      Lustre: DEBUG MARKER: /usr/sbin/lctl list_param mgs.*.ir_timeout
      Lustre: DEBUG MARKER: lctl set_param -n mgs.MGS.live.lustre=state=full
      Lustre: MGS (2.7.0.0) refused the connection from different version MDT (2.6.0.0) 10.1.4.150@tcp 17c0ca90-6e3b-8642-1b7b-a19358c36e81
      Lustre: MGS (2.7.0.0) refused the connection from different version MDT (2.6.0.0) 10.1.4.150@tcp 17c0ca90-6e3b-8642-1b7b-a19358c36e81
      Lustre: MGS (2.7.0.0) refused the connection from different version MDT (2.6.0.0) 10.1.4.150@tcp 17c0ca90-6e3b-8642-1b7b-a19358c36e81
      Lustre: MGS (2.7.0.0) refused the connection from different version MDT (2.6.0.0) 10.1.4.150@tcp 17c0ca90-6e3b-8642-1b7b-a19358c36e81
      Lustre: DEBUG MARKER: /usr/sbin/lctl mark  recovery-small test_105: @@@@@@ FAIL: mount failed 
      

            yong.fan nasf (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: