lustre/ldlm/ldlm_lib.c
@@ -902,10 +902,14 @@ int target_handle_connect(struct ptlrpc_request *req)
 			     OBD_CONNECT_LIGHTWEIGHT) != 0;
 
 		/* OBD_CONNECT_MNE_SWAB is defined as OBD_CONNECT_MDS_MDS
-		 * for Imperative Recovery connection from MGC to MGS. */
+		 * for Imperative Recovery connection from MGC to MGS.
+		 *
+		 * Via check OBD_CONNECT_FID, we can distinguish whether
+		 * the OBD_CONNECT_MDS_MDS/OBD_CONNECT_MNE_SWAB is from
+		 * MGC or MDT. */
 		if (!lw_client &&
 		    (data->ocd_connect_flags & OBD_CONNECT_MDS_MDS) &&
-		    !(data->ocd_connect_flags & OBD_CONNECT_IMP_RECOV) &&
+		    (data->ocd_connect_flags & OBD_CONNECT_FID) &&
 		    (data->ocd_connect_flags & OBD_CONNECT_VERSION)) {
 			__u32 major = OBD_OCD_VERSION_MAJOR(data->ocd_version);
 			__u32 minor = OBD_OCD_VERSION_MINOR(data->ocd_version);
